# wim-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml  release.yml
benches/: xml_parsing.rs
examples/: basic_usage.rs  performance_comparison.rs
scripts/: verify-version.sh
src/: lib.rs
tests/: wim_parser_test.rs
