[package]
name = "wim-parser"
version = "0.1.0"
authors = ["junjiangao <junjiangao@github.com>"]
edition = "2021"
description = "A Rust library for parsing Windows Imaging (WIM) files"
license = "MIT"
repository = "https://github.com/junjiangao/wim-parser"
homepage = "https://github.com/junjiangao/wim-parser"
documentation = "https://docs.rs/wim-parser"
readme = "README.md"
keywords = ["wim", "windows", "imaging", "parser", "archive"]
categories = ["parsing", "filesystem"]

[dependencies]
anyhow = "1.0"
quick-xml = "0.38"
encoding_rs = "0.8"  # 高效UTF-16解码

# 可选的日志功能
tracing = { version = "0.1", optional = true }

[features]
default = ["logging"]
logging = ["tracing"]
benchmarking = []

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = "0.5"
tempfile = "3.0"

[[example]]
name = "basic_usage"
required-features = ["logging"]

[[example]]
name = "performance_comparison"
required-features = ["benchmarking"]

[[bench]]
name = "xml_parsing"
harness = false